<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include
        android:id="@+id/show_profile_toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/show_profile_toolbar"
        android:layout_marginBottom="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageViewShow"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="19dp"
                android:layout_marginStart="19dp"
                android:background="@drawable/profile_image_border"
                android:contentDescription="@string/app_name"
                android:labelFor="@id/imageViewShow"
                android:padding="8dp" />

            <TextView
                android:id="@+id/nameSurnameShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/imageViewShow"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="11dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="11dp"
                android:layout_marginStart="20dp"

                android:layout_toEndOf="@+id/imageViewShow"
                android:layout_toRightOf="@+id/imageViewShow"
                android:ems="20"
                android:gravity="start"
                android:labelFor="@+id/nameSurnameShow"
                android:padding="8dp"
                android:text="@string/name_surname"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cityShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/nameSurnameShow"
                android:layout_alignStart="@+id/nameSurnameShow"
                android:layout_below="@+id/nameSurnameShow"
                android:layout_marginRight="11dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:gravity="start"
                android:labelFor="@+id/cityShow"
                android:padding="8dp"
                android:text="@string/city"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/imageViewShow"
                android:layout_centerHorizontal="true"

                android:layout_marginTop="18dp"

                android:background="@drawable/show_profile_main_info_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp"
                android:textAlignment="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Latest book uploaded"
                    android:textSize="25sp"
                    android:textStyle="bold"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="The alchemist"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Paulo Coelho - 1988"
                    android:textSize="20sp" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>